# sudoku

./: .gitlab-ci.yml  CMakeLists.txt  README.md
.github/workflows/: ccpp.yml
example_tables/: expert.txt  hard.txt  medium.txt  table1.txt  table2.txt
include/: algorithm1.hpp  algorithm2.hpp  board.hpp  common.hpp
src/: algorithm1.cpp  algorithm2.cpp  board.cpp  common.cpp  main.cpp
src/main/: main.cpp
tests/: CMakeLists.txt  output_table1.txt  output_table2.txt  test_algorithm1.cpp  test_algorithm2.cpp  test_algorithms.cpp  test_convert_to_admitted.cpp  test_heuristics1.cpp  test_heuristics2.cpp  test_read.cpp  test_verify_assumption.cpp
tools/: get_git_commit.sh
